MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/css/index.css
/* This is the style sheet for the remote control
 * found under index.html */

/* removes all margins and padding. */

* { margin: 0; padding: 0;}

/*makes height be full screen */
html, body {height: 100%; }

body {
    font-size: 180%;
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-tap-highlight-color: transparent; /* For some Androids */
}

/* previous width and height in em units commented
 * in case there is a need to revert. */

/* all the UI elements (buttons, laser control, notes, etc)
 * currently have a black border for ease of development */
.UI {
    font-size: 6.3vmin;
    border: 1px solid black;
    display: inline-block;
    vertical-align: top;
}

input[type=text] {
    font-size: 20px;
    
    /*border: none;*/ /*turns off border on the URL element text box*/
    border-style: inset;
    color: grey;
    width: 45%;
}

#timeDisplay {
    font: bold 6.3vmin impact, sans-serif;
    text-align: center;
    overflow: hidden;
}

#notes {
    position: relative;
    overflow: scroll;
    z-index: 1;
}

/* overlay element is intended to cover up the iframe to disable
 * user interaction with the iframe. */
#overlay {
    position:absolute;
    width: inherit; height: inherit;
    border: none;
    z-index: 0;
}

#theIframe {
position: absolute;
width: 268%; height: 230%;
z-index: 0;
left: 10%;
}

.topRow {
    height: 7%;
}

.midRow {
    height: 71%;
}

.botRow {
    height: 14%;
    opacity:0.7;
    border: none;
}

.leftCol {
    width: 10%;
}

.midCol {
    width: 70%;
}

.rightCol {
    width: 18.75%
}

#prev {
    left: 0px;
    bottom: 0px;
}

#prev:active {
    border-color: red;
}

#next {
    right: 0px;
    bottom: 0px;
    
}

#next:active {
    border-color:red;
}

/* filler elements are for spacing the buttons on the
 * bottom row. */
#filler {
    width: 10px;
    border: white;
}

#laser {
    color: black;
    /*background-image: url('../img/buttonLaser.png');*/
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
}

#draw {
    color: black;
    /*background-image: url('../img/buttonDraw.png');*/
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    
}

#speech {
    color: black;
    /*background-image: url('../img/buttonSpeech.png');*/
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
}


.buttons {
    float: left;
    display: inline-block;
    height: 20%px;
    width: 23.5%;
    font-size: 36px;
    font-weight: bold;
    border-width: 4px;
    border-style: solid;
    border-color: blue;
    border-radius: 25px;
}

.buttons_off {
    background: -webkit-linear-gradient(white, blue); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(white, blue); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(white, blue); /* For Firefox 3.6 to 15 */
    background: linear-gradient(white, blue); /* Standard syntax */
}

.buttons_on {
    background: -webkit-linear-gradient(yellow, white); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(yellow, white); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(yellow, white); /* For Firefox 3.6 to 15 */
    background: linear-gradient(yellow, white); /* Standard syntax */
}

.buttons_div {
    position: absolute;
    z-index: 100;
    width: 100%;
    bottom: 0px;
}

/* wrap and frame classes are for resizing the content inside
 * the iframe */

.wrap {
    padding: 0;
    overflow: hidden;
}

.frame {
    width: auto; height: auto;
    border: 0px;
    
    -ms-transform: scale(0.3);
    -moz-transform: scale(0.3);
    -o-transform: scale(0.3);
    -webkit-transform: scale(0.3);
    transform: scale(0.3);
    
    -ms-transform-origin: 0 0;
    -moz-transform-origin: 0 0;
    -o-tranform-origin: 0 0;
    -webkit-transform-origin: 0 0;
    transform-origin: 0 0;

}

